--- a/resources/sass/parti/_footer.scss
+++ b/resources/sass/parti/_footer.scss
@@ -1,7 +1,7 @@
 footer{
     height: 300px;
     padding: 10px;
-    background-color: black;
+    background-image: url(../img/footer-bg.jpg);
     display: flex;
     justify-content: space-around;
 
